--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -4185,6 +4185,7 @@ libimage-exiftool-perl:
   arch: [perl-image-exiftool]
   debian: [libimage-exiftool-perl]
   gentoo: [media-libs/exiftool]
+  nixos: [perlPackages.ImageExifTool]
   ubuntu: [libimage-exiftool-perl]
 libirrlicht-dev:
   arch: [irrlicht]
@@ -4325,10 +4326,12 @@ liblapacke-dev:
   ubuntu: [liblapacke-dev]
 liblcm:
   debian: [liblcm1]
+  nixos: [lcm]
   ubuntu:
     '*': [liblcm1]
 liblcm-dev:
   debian: [liblcm-dev]
+  nixos: [lcm.dev]
   ubuntu:
     '*': [liblcm-dev]
 libleptonica-dev:
@@ -4545,12 +4548,14 @@ libnanoflann-dev:
     '*': [libnanoflann-dev]
     buster: null
   gentoo: [sci-libs/nanoflann]
+  nixos: [nanoflann]
   ubuntu:
     '*': [libnanoflann-dev]
     bionic: null
     focal: null
 libnanopb-dev:
   debian: [libnanopb-dev]
+  nixos: [nanopb]
   ubuntu:
     '*': [libnanopb-dev]
     bionic: null
@@ -4559,6 +4564,7 @@ libncurses:
   debian: [libncurses6]
   fedora: [ncurses]
   gentoo: [sys-libs/ncurses]
+  nixos: [ncurses]
   osx:
     homebrew:
       packages: [ncurses]
@@ -8775,6 +8781,7 @@ tshark:
   arch: [wireshark-cli]
   debian: [tshark]
   fedora: [wireshark-cli]
+  nixos: [tshark]
   rhel: [wireshark-cli]
   ubuntu: [tshark]
 ttf-kochi-gothic:
@@ -8814,6 +8821,7 @@ udhcpc:
   ubuntu: [udhcpc]
 unclutter:
   debian: [unclutter]
+  nixos: [unclutter]
   ubuntu: [unclutter]
 uncrustify:
   alpine: [uncrustify]
@@ -9019,12 +9027,14 @@ wkhtmltopdf:
   debian: [wkhtmltopdf]
   fedora: [wkhtmltopdf]
   gentoo: [media-gfx/wkhtmltopdf]
+  nixos: [wkhtmltopdf]
   ubuntu: [wkhtmltopdf]
 wmctrl:
   arch: [wmctrl]
   debian: [wmctrl]
   fedora: [wmctrl]
   gentoo: [x11-misc/wmctrl]
+  nixos: [wmctrl]
   opensuse: [wmctrl]
   rhel: [wmctrl]
   ubuntu: [wmctrl]
@@ -9033,6 +9043,7 @@ workrave:
   debian: [workrave]
   fedora: [workrave]
   gentoo: [app-misc/workrave]
+  nixos: [workrave]
   ubuntu: [workrave, workrave-data]
 wx-common:
   arch: [wxwidgets-gtk3]
@@ -9113,6 +9124,7 @@ xerces:
   debian: [libxerces-c-dev]
   fedora: [xerces-c]
   gentoo: [dev-libs/xerces-c]
+  nixos: [xercesc]
   ubuntu: [libxerces-c-dev]
 xfont-server:
   debian: [xfs]
@@ -9136,6 +9148,7 @@ xpath-perl:
   fedora: [perl-XML-XPath]
   gentoo: [dev-perl/XML-XPath]
   macports: [p5-xml-xpath]
+  nixos: [perlPackages.XMLXPath]
   ubuntu: [libxml-xpath-perl]
 xsimd:
   alpine: [xsimd]
@@ -9200,6 +9213,7 @@ xz-utils:
   debian: [xz-utils]
   fedora: [xz]
   gentoo: [app-arch/xz-utils]
+  nixos: [xz]
   ubuntu: [xz-utils]
 yaml:
   alpine: [yaml-dev]
