--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -8278,6 +8278,15 @@ repositories:
       version: rolling
     status: maintained
   turtle_nest:
+    doc:
+      type: git
+      url: https://github.com/Jannkar/turtle_nest.git
+      version: main
+    release:
+      tags:
+        release: release/jazzy/{package}/{version}
+      url: https://github.com/ros2-gbp/turtle_nest-release.git
+      version: 1.0.1-1
     source:
       type: git
       url: https://github.com/Jannkar/turtle_nest.git
