Add python3-owslib to rosdep/python.yaml

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -7640,6 +7640,14 @@ python3-owlready2-pip:
   ubuntu:
     pip:
       packages: [owlready2]
+python3-owslib:
+  arch: [python-owslib]
+  debian: [python3-owslib]
+  gentoo: [dev-python/owslib]
+  nixos: [python312Packages.owslib]
+  opensuse: [python3-OWSLib]
+  rhel: [python3-OWSLib]
+  ubuntu: [python3-owslib]
 python3-packaging:
   alpine: [py3-packaging]
   arch: [python-packaging]
