Added doc entry for ros_babel_fish.

--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -8047,6 +8047,10 @@ repositories:
       version: main
     status: maintained
   ros_babel_fish:
+    doc:
+      type: git
+      url: https://github.com/LOEWE-emergenCITY/ros2_babel_fish.git
+      version: humble
     release:
       packages:
       - ros_babel_fish
