--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -10543,6 +10543,12 @@ repositories:
       url: https://github.com/UniversalRobots/Universal_Robots_ROS2_Driver.git
       version: humble
     status: developed
+  ur_simulation_gz:
+    source:
+      type: git
+      url: https://github.com/UniversalRobots/Universal_Robots_ROS2_GZ_Simulation.git
+      version: humble
+    status: developed
   urdf:
     doc:
       type: git
