--- a/rolling/distribution.yaml
+++ b/rolling/distribution.yaml
@@ -8109,6 +8109,12 @@ repositories:
       url: https://github.com/UniversalRobots/Universal_Robots_ROS2_Driver.git
       version: main
     status: developed
+  ur_simulation_gz:
+    source:
+      type: git
+      url: https://github.com/UniversalRobots/Universal_Robots_ROS2_GZ_Simulation.git
+      version: ros2
+    status: developed
   urdf:
     doc:
       type: git
