Update branches for ros_gz
Signed-off-by: Addisu Z. Taddese <addisu@openrobotics.org>

--- a/iron/distribution.yaml
+++ b/iron/distribution.yaml
@@ -6248,7 +6248,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/gazebosim/ros_gz.git
-      version: humble
+      version: iron
     release:
       packages:
       - ros_gz
@@ -6272,7 +6272,7 @@ repositories:
       test_pull_requests: true
       type: git
       url: https://github.com/gazebosim/ros_gz.git
-      version: humble
+      version: iron
     status: developed
   ros_image_to_qimage:
     doc:
