--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -6650,6 +6650,21 @@ repositories:
       url: https://bitbucket.org/qbrobotics/qbshin-ros.git
       version: production-humble
     status: developed
+  qml_ros2_plugin:
+    doc:
+      type: git
+      url: https://github.com/StefanFabian/qml_ros2_plugin.git
+      version: master
+    release:
+      tags:
+        release: release/humble/{package}/{version}
+      url: https://github.com/ros2-gbp/qml_ros2_plugin-release.git
+      version: 1.0.1-1
+    source:
+      type: git
+      url: https://github.com/StefanFabian/qml_ros2_plugin.git
+      version: master
+    status: developed
   qpoases_vendor:
     release:
       tags:
