Add python3-OWSLib key for fedora

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -7643,6 +7643,7 @@ python3-owlready2-pip:
 python3-owslib:
   arch: [python-owslib]
   debian: [python3-owslib]
+  fedora: [python3-OWSLib]
   gentoo: [dev-python/owslib]
   nixos: [python312Packages.owslib]
   opensuse: [python3-OWSLib]
