robot_upstart: 1.0.3-1 in 'jazzy/distribution.yaml' [bloom]

--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -6196,6 +6196,21 @@ repositories:
       url: https://github.com/ros/robot_state_publisher.git
       version: jazzy
     status: maintained
+  robot_upstart:
+    doc:
+      type: git
+      url: https://github.com/clearpathrobotics/robot_upstart.git
+      version: foxy-devel
+    release:
+      tags:
+        release: release/jazzy/{package}/{version}
+      url: https://github.com/clearpath-gbp/robot_upstart-release.git
+      version: 1.0.3-1
+    source:
+      type: git
+      url: https://github.com/clearpathrobotics/robot_upstart.git
+      version: foxy-devel
+    status: developed
   robotraconteur:
     release:
       tags:
