--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -8386,6 +8386,26 @@ repositories:
       url: https://github.com/turtlebot/turtlebot4_desktop.git
       version: jazzy
     status: developed
+  turtlebot4_simulator:
+    doc:
+      type: git
+      url: https://github.com/turtlebot/turtlebot4_simulator.git
+      version: jazzy
+    release:
+      packages:
+      - turtlebot4_gz_bringup
+      - turtlebot4_gz_gui_plugins
+      - turtlebot4_gz_toolbox
+      - turtlebot4_simulator
+      tags:
+        release: release/jazzy/{package}/{version}
+      url: https://github.com/ros2-gbp/turtlebot4_simulator-release.git
+      version: 2.0.0-1
+    source:
+      type: git
+      url: https://github.com/turtlebot/turtlebot4_simulator.git
+      version: jazzy
+    status: developed
   tuw_geometry:
     doc:
       type: git
