timed_roslaunch: 0.2.0-1 in 'noetic/distribution.yaml' [bloom]

--- a/noetic/distribution.yaml
+++ b/noetic/distribution.yaml
@@ -12075,6 +12075,21 @@ repositories:
       url: https://github.com/ThundeRatz/thunder_line_follower_pmr3100.git
       version: master
     status: developed
+  timed_roslaunch:
+    doc:
+      type: git
+      url: https://github.com/Tiryoh/timed_roslaunch.git
+      version: noetic-devel
+    release:
+      tags:
+        release: release/noetic/{package}/{version}
+      url: https://github.com/Tiryoh/timed_roslaunch-release.git
+      version: 0.2.0-1
+    source:
+      type: git
+      url: https://github.com/Tiryoh/timed_roslaunch.git
+      version: noetic-devel
+    status: maintained
   trac_ik:
     doc:
       type: git
