--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -10805,6 +10805,11 @@ repositories:
       type: git
       url: https://github.com/blackcoffeerobotics/vector_pursuit_controller.git
       version: master
+    release:
+      tags:
+        release: release/humble/{package}/{version}
+      url: https://github.com/ros2-gbp/vector_pursuit_controller-release.git
+      version: 1.0.1-1
     source:
       type: git
       url: https://github.com/blackcoffeerobotics/vector_pursuit_controller.git
