--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -10187,6 +10187,11 @@ python3-webargs:
     focal:
       pip:
         packages: [webargs]
+python3-webpy:
+  debian: [python3-webpy]
+  fedora: [python3-webpy]
+  rhel: [py3-webpy]
+  ubuntu: [python3-webpy]
 python3-websocket:
   debian: [python3-websocket]
   fedora: [python3-websocket-client]
