robot_upstart: 1.0.4-1 in 'humble/distribution.yaml' [bloom]

--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -7710,8 +7710,8 @@ repositories:
     release:
       tags:
         release: release/humble/{package}/{version}
-      url: https://github.com/clearpath-gbp/robot_upstart-release.git
-      version: 1.0.3-1
+      url: git@github.com:clearpath-gbp/robot_upstart-release.git
+      version: 1.0.4-1
     source:
       type: git
       url: https://github.com/clearpathrobotics/robot_upstart.git
