--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -7710,7 +7710,7 @@ repositories:
     release:
       tags:
         release: release/humble/{package}/{version}
-      url: git@github.com:clearpath-gbp/robot_upstart-release.git
+      url: https://github.com/clearpath-gbp/robot_upstart-release.git
       version: 1.0.4-1
     source:
       type: git
