--- a/iron/distribution.yaml
+++ b/iron/distribution.yaml
@@ -6254,7 +6254,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/gazebosim/ros_gz.git
-      version: humble
+      version: iron
     release:
       packages:
       - ros_gz
@@ -6278,7 +6278,7 @@ repositories:
       test_pull_requests: true
       type: git
       url: https://github.com/gazebosim/ros_gz.git
-      version: humble
+      version: iron
     status: developed
   ros_image_to_qimage:
     doc:
