--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -6593,7 +6593,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/gazebosim/ros_gz.git
-      version: humble
+      version: jazzy
     release:
       packages:
       - ros_gz
@@ -6611,7 +6611,7 @@ repositories:
       test_pull_requests: true
       type: git
       url: https://github.com/gazebosim/ros_gz.git
-      version: humble
+      version: jazzy
     status: developed
   ros_image_to_qimage:
     doc:
