--- a/rolling/distribution.yaml
+++ b/rolling/distribution.yaml
@@ -6247,7 +6247,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/gazebosim/ros_gz.git
-      version: humble
+      version: ros2
     release:
       packages:
       - ros_gz
@@ -6265,7 +6265,7 @@ repositories:
       test_pull_requests: true
       type: git
       url: https://github.com/gazebosim/ros_gz.git
-      version: humble
+      version: ros2
     status: developed
   ros_image_to_qimage:
     doc:
