added python3 noisereduce

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -7352,6 +7352,10 @@ python3-nmcli-pip:
     pip:
       depends: [network-manager]
       packages: [nmcli]
+python3-noisereduce:
+  '*':
+    pip:
+      packages: [noisereduce]
 python3-nose:
   arch: [python-nose]
   debian: [python3-nose]
