added missing .git

--- a/rolling/distribution.yaml
+++ b/rolling/distribution.yaml
@@ -7189,7 +7189,7 @@ repositories:
     release:
       tags:
         release: release/rolling/{package}/{version}
-      url: https://github.com/ros2-gbp/sick_safetyscanners2_interfaces-release
+      url: https://github.com/ros2-gbp/sick_safetyscanners2_interfaces-release.git
       version: 1.0.0-1
     source:
       type: git
