nixos: libgpiod-dev needs to point to libgpiod_1
https://search.nixos.org/packages?channel=24.05&show=libgpiod_1&from=0&size=50&sort=relevance&type=packages&query=libgpiod

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -3893,7 +3893,7 @@ libgpiod-dev:
   debian: [libgpiod-dev]
   fedora: [libgpiod-devel]
   gentoo: [dev-libs/libgpiod]
-  nixos: [libgpiod]
+  nixos: [libgpiod_1]
   opensuse: [libgpiod-devel]
   rhel:
     '*': [libgpiod-devel]
