nixos: protobuf-compiler-grpc provided by grpc

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -7717,6 +7717,7 @@ protobuf-compiler-grpc:
   arch: [grpc]
   debian: [protobuf-compiler-grpc]
   fedora: [grpc-plugins]
+  nixos: [grpc]
   rhel:
     '8': null
     '9': [grpc-plugins]
