--- a/iron/distribution.yaml
+++ b/iron/distribution.yaml
@@ -8386,6 +8386,12 @@ repositories:
       url: https://github.com/UniversalRobots/Universal_Robots_ROS2_Driver.git
       version: iron
     status: developed
+  ur_simulation_gz:
+    source:
+      type: git
+      url: https://github.com/UniversalRobots/Universal_Robots_ROS2_GZ_Simulation.git
+      version: iron
+    status: developed
   urdf:
     doc:
       type: git
