privacy_msgs: 1.1.0-1 in 'humble/distribution.yaml' [bloom]

--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -6412,6 +6412,20 @@ repositories:
       url: https://github.com/mrpt-ros-pkg/pose_cov_ops.git
       version: master
     status: maintained
+  privacy_msgs:
+    doc:
+      type: git
+      url: https://github.com/ros4hri/privacy_msgs.git
+      version: humble-devel
+    release:
+      tags:
+        release: release/humble/{package}/{version}
+      url: https://github.com/ros4hri/privacy_msgs-release.git
+      version: 1.1.0-1
+    source:
+      type: git
+      url: https://github.com/ros4hri/privacy_msgs.git
+      version: humble-devel
   proxsuite:
     doc:
       type: git
