hri_face_detect: 2.0.10-2 in 'humble/distribution.yaml' [bloom]

--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -3221,6 +3221,15 @@ repositories:
       type: git
       url: https://github.com/ros4hri/hri_actions_msgs.git
       version: humble-devel
+  hri_face_detect:
+    doc:
+      type: git
+      url: https://github.com/ros4hri/hri_face_detect.git
+      version: humble-devel
+    source:
+      type: git
+      url: https://github.com/ros4hri/hri_face_detect.git
+      version: humble-devel
   hri_msgs:
     doc:
       type: git
