rosdep: add python3-ikpy-pip

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -6576,6 +6576,10 @@ python3-ignition-math6:
   ubuntu:
     focal: [python3-ignition-math6]
     jammy: [python3-ignition-math6]
+python3-ikpy-pip:
+  '*':
+    pip:
+      packages: [ikpy]
 python3-imageio:
   debian: [python3-imageio]
   fedora: [python3-imageio]
