--- a/noetic/distribution.yaml
+++ b/noetic/distribution.yaml
@@ -12470,7 +12470,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros-industrial/ur_msgs.git
-      version: melodic
+      version: noetic
     release:
       tags:
         release: release/noetic/{package}/{version}
@@ -12479,7 +12479,7 @@ repositories:
     source:
       type: git
       url: https://github.com/ros-industrial/ur_msgs.git
-      version: melodic-devel
+      version: noetic-devel
     status: maintained
   ur_robot_driver:
     doc:
