--- a/noetic/distribution.yaml
+++ b/noetic/distribution.yaml
@@ -12470,16 +12470,16 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros-industrial/ur_msgs.git
-      version: melodic
+      version: noetic
     release:
       tags:
         release: release/noetic/{package}/{version}
       url: https://github.com/ros-industrial-release/ur_msgs-release.git
-      version: 1.3.4-1
+      version: 1.4.0-1
     source:
       type: git
       url: https://github.com/ros-industrial/ur_msgs.git
-      version: melodic-devel
+      version: noetic-devel
     status: maintained
   ur_robot_driver:
     doc:
