--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -1233,6 +1233,8 @@ repositories:
       - clearpath_customization
       - clearpath_description
       - clearpath_generator_common
+      - clearpath_manipulators
+      - clearpath_manipulators_description
       - clearpath_mounts_description
       - clearpath_platform
       - clearpath_platform_description
@@ -1240,7 +1242,7 @@ repositories:
       tags:
         release: release/humble/{package}/{version}
       url: https://github.com/clearpath-gbp/clearpath_common-release.git
-      version: 0.2.11-1
+      version: 0.3.0-1
     source:
       type: git
       url: https://github.com/clearpathrobotics/clearpath_common.git
