--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -8544,6 +8544,7 @@ python3-pyside6:
     bullseye:
       pip:
         packages: [PySide6]
+    trixie: [libpyside6-dev]
     sid: [libpyside6-dev]
   osx:
     pip:
@@ -8568,46 +8569,55 @@ python3-pyside6:
     oracular: [libpyside6-dev]
 python3-pyside6.qtasyncio:
   debian:
+    trixie: [python3-pyside6.qtasyncio]
     sid: [python3-pyside6.qtasyncio]
   ubuntu:
     oracular: [python3-pyside6.qtasyncio]
 python3-pyside6.qtcharts:
   debian:
+    trixie: [python3-pyside6.qtcharts]
     sid: [python3-pyside6.qtcharts]
   ubuntu:
     oracular: [python3-pyside6.qtcharts]
 python3-pyside6.qtconcurrent:
   debian:
+    trixie: [python3-pyside6.qtconcurrent]
     sid: [python3-pyside6.qtconcurrent]
   ubuntu:
     oracular: [python3-pyside6.qtconcurrent]
 python3-pyside6.qtcore:
   debian:
+    trixie: [python3-pyside6.qtcore]
     sid: [python3-pyside6.qtcore]
   ubuntu:
     oracular: [python3-pyside6.qtcore]
 python3-pyside6.qtdatavisualization:
   debian:
+    trixie: [python3-pyside6.qtdatavisualization]
     sid: [python3-pyside6.qtdatavisualization]
   ubuntu:
     oracular: [python3-pyside6.qtdatavisualization]
 python3-pyside6.qtgui:
   debian:
+    trixie: [python3-pyside6.qtgui]
     sid: [python3-pyside6.qtgui]
   ubuntu:
     oracular: [python3-pyside6.qtgui]
 python3-pyside6.qtqml:
   debian:
+    trixie: [python3-pyside6.qtqml]
     sid: [python3-pyside6.qtqml]
   ubuntu:
     oracular: [python3-pyside6.qtqml]
 python3-pyside6.qttest:
   debian:
+    trixie: [python3-pyside6.qttest]
     sid: [python3-pyside6.qttest]
   ubuntu:
     oracular: [python3-pyside6.qttest]
 python3-pyside6.qtwidgets:
   debian:
+    trixie: [python3-pyside6.qtwidgets]
     sid: [python3-pyside6.qtwidgets]
   ubuntu:
     oracular: [python3-pyside6.qtwidgets]
