Add crypto++ entry for nixos

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -718,6 +718,7 @@ crypto++:
   debian: [libcrypto++-dev]
   fedora: [cryptopp-devel]
   gentoo: [dev-libs/crypto++]
+  nixos: [cryptopp]
   ubuntu: [libcrypto++-dev]
 curl:
   alpine: [curl-dev]
